Prevent vertical overflow in ProductCard container elements
They fade in and shift upwards when first entering the viewport, so they were occasionally overflowing the bottom edge of their containing element.

--- a/packages/frontend/src/features/CategoryProductList/components/SubcategoryProductList/index.module.css
+++ b/packages/frontend/src/features/CategoryProductList/components/SubcategoryProductList/index.module.css
@@ -3,6 +3,8 @@
     grid-template-columns: repeat(1, 1fr);
     gap: 16px;
 
+    overflow-y: hidden;
+
     padding: 16px 0px;
 
     @media (min-width: $mantine-breakpoint-xs) {
