--- a/packages/frontend/src/features/CategoryProductList/index.module.css
+++ b/packages/frontend/src/features/CategoryProductList/index.module.css
@@ -40,6 +40,8 @@
     grid-template-columns: repeat(1, 1fr);
     gap: 16px;
 
+    overflow-y: hidden;
+
     padding: 0px 0px 16px;
 
     @media (min-width: $mantine-breakpoint-xs) {
